# debloat.rs

./: AGENTS.md  BUILD_ISSUE.md  Cargo.toml  README.md  USAGE.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
scripts/: install.ps1
src/: cli.rs  main.rs
src/apps/: app_removal.rs  apps.rs  edge_services.rs  mod.rs  onedrive.rs  outlook.rs
src/apps/outlook/: cleanup.rs  core.rs  mod.rs  userdata.rs
src/debloat/: apps_remove.rs  edge_vanisher.rs  mod.rs  system_debloat.rs  uninstall_oo.rs  win11debloat.rs
src/system/: admin_check.rs  mod.rs  privacy_tweaks.rs  registry_tweaks.rs  service_helpers.rs  services.rs  telemetry.rs  winutil.rs
src/tweaks/: mod.rs  registry.rs  system_tweaks.rs  tweaks.rs
src/tweaks/registry/: mod.rs  registry_explorer.rs  registry_helpers.rs  registry_system.rs  registry_ui.rs
src/tweaks/system_tweaks/: mod.rs  registry_accessibility_tweaks.rs  registry_content_tweaks.rs  registry_explorer_tweaks.rs
src/tweaks/tweaks/: debloat_tweaks.rs  explorer_tweaks.rs  feature_tweaks.rs  mod.rs
src/ui/: dark_mode.rs  explorer.rs  mod.rs  mouse.rs  snap_button.rs  taskbar.rs  ui_features.rs  wallpaper.rs
