[package]
name = "windows-debloater"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "windows-debloater"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62", features = [
   "Win32_UI_Shell",
   "Win32_UI_WindowsAndMessaging",
   "Win32_System_SystemInformation",
   "Win32_System_Registry",
   "Win32_Foundation",
   "Win32_Security",
   "Win32_System_Com",
   "Win32_System_Services",
   "Win32_Security_Authorization",
   "Win32_System_Threading",
   "Win32_System_Diagnostics_ToolHelp",
] }
dirs = "5"
ureq = "2.9"

[profile.release]
opt-level = 3
lto = true

